Archive2/45/c18d53019a736d/output
main.cpp: In instantiation of 'struct adapter::vector_traits<test::matrix_double>':
main.cpp:36:13:   required by substitution of 'template<class vector_type> vector_type adapter::allocate(const typename adapter::vector_traits<vector_type>::value_type*, size_t) [with vector_type = test::matrix_double]'
main.cpp:87:80:   required from here
main.cpp:9:46: error: no type named 'value_type' in 'class test::matrix_double'
     typedef typename vector_type::value_type value_type;
                                              ^
